--- a/client/assets/css/styles.css
+++ b/client/assets/css/styles.css
@@ -143,7 +143,7 @@ body {
 }
 
 .main {
-    *min-height: calc(100vh - 100px);
+    min-height: calc(100vh - 90px);
     flex: 1;
 }
 
@@ -216,6 +216,7 @@ body {
     border-radius: 0 4px 4px 0;
     margin: 0; 
     color: #FFF;
+    *border: none;
     -webkit-border-radius: .2rem;
         -moz-border-radius: .2rem;
              border-radius: .2rem;
@@ -816,13 +817,14 @@ div.nexted ~ div.nexted {
 
 .forgot-password {
     font-size: .8rem;
-    margin: .5rem;
+    margin: .5rem .1rem;
     color: rgb(151, 20, 20)
 }
 
 .forgot-password:hover {
     color: rgb(245, 40, 40);
     text-decoration: none; 
+    border-bottom: none;
 }
 
 .form-title {
