--- a/client/assets/css/styles.css
+++ b/client/assets/css/styles.css
@@ -1117,7 +1117,7 @@ html {
 }
 
 .modal {
-    *display: none;
+    display: none;
     position: fixed;
     z-index: 10000;
     padding-top: 80px;
@@ -1126,7 +1126,8 @@ html {
     width: 100%;
     height: 100%;
     overflow: auto;
-    background-color: rgba(243, 243, 243, 0.87);
+    background-color: rgba(0,0,0,0.4);
+    *background-color: rgba(243, 243, 243, 0.87);
 }
 
 .modal-body .form {
@@ -1182,6 +1183,7 @@ html {
     margin-top: .2rem;
 }
 
+.price::before,
 .naira::before {
     content: "\20A6 \00a0";
 }
